Update 'wijogsvnz-dotnet-basic' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-39cef04d1b.p0a3.p3.openshiftapps.com/rhtap/rhtap-qe-dotnet-basic:b5c712b088573cb79a8f80288364335fd9d5864e@sha256:137c0ca8634d5bd77f5d7e2d3deb46a6e72c7f74e03d91dd7dc1a5c3ac9ee902

--- a/components/wijogsvnz-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/wijogsvnz-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: wijogsvnz-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-39cef04d1b.p0a3.p3.openshiftapps.com/rhtap/rhtap-qe-dotnet-basic:b5c712b088573cb79a8f80288364335fd9d5864e@sha256:137c0ca8634d5bd77f5d7e2d3deb46a6e72c7f74e03d91dd7dc1a5c3ac9ee902
+          name: container-image
